@@ -162,6 +162,20 @@ public class SimpleFacetsTest extends SolrTestCaseJ4 {
         ),
         "//lst[@name='facet_queries']/int[@name='airport_s1:ams'][.='2']"
     );
+    /* Testing facet.query using tagged filter query and exclusion */
+    assertQ(
+        req(
+            "q", "*:*",
+            "fq", "id:[2000 TO 2004]",
+            "fq", "{!tag=dus}airport_s1:dus",
+            "group", "true",
+            "group.facet", "true",
+            "group.field", "hotel_s1",
+            "facet", "true",
+            "facet.query", "{!ex=dus}airport_s1:ams"
+        ),
+        "//lst[@name='facet_queries']/int[@name='{!ex=dus}airport_s1:ams'][.='2']"
+    );
     assertQ(
         req(
             "q", "*:*",
@@ -171,6 +185,28 @@ public class SimpleFacetsTest extends SolrTestCaseJ4 {
             "group.field", "hotel_s1",
             "facet", "true",
             "facet.range", "duration_i1",
+            "facet.range.start", "5",
+            "facet.range.end", "11",
+            "facet.range.gap", "1"
+        ),
+        "//lst[@name='facet_ranges']/lst[@name='duration_i1']/lst[@name='counts']/int[@name='5'][.='2']",
+        "//lst[@name='facet_ranges']/lst[@name='duration_i1']/lst[@name='counts']/int[@name='6'][.='0']",
+        "//lst[@name='facet_ranges']/lst[@name='duration_i1']/lst[@name='counts']/int[@name='7'][.='0']",
+        "//lst[@name='facet_ranges']/lst[@name='duration_i1']/lst[@name='counts']/int[@name='8'][.='0']",
+        "//lst[@name='facet_ranges']/lst[@name='duration_i1']/lst[@name='counts']/int[@name='9'][.='0']",
+        "//lst[@name='facet_ranges']/lst[@name='duration_i1']/lst[@name='counts']/int[@name='10'][.='2']"
+    );
+    /* Testing facet.range using tagged filter query and exclusion */
+    assertQ(
+        req(
+            "q", "*:*",
+            "fq", "id:[2000 TO 2004]",
+            "fq", "{!tag=dus}airport_s1:dus",
+            "group", "true",
+            "group.facet", "true",
+            "group.field", "hotel_s1",
+            "facet", "true",
+            "facet.range", "{!ex=dus}duration_i1",
             "facet.range.start", "5",
             "facet.range.end", "11",
             "facet.range.gap", "1"
